eda/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eda
  name: eda-ingress-webhook
spec:
  tls:
    - hosts:
        - eda.lab
      secretName: eda-secret-tls
  rules:
    - host: eda.lab
      http:
        paths:
          - path: /webhooks/demo
            pathType: ImplementationSpecific
            backend:
              service:
                name: activation-job-2-2-5000
                port:
                  number: 5000
